syntax = "proto3";
package tabi.claims.v1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/base/v1beta1/coin.proto";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

import "tabi/claims/v1/claims.proto";

option go_package = "github.com/tabilabs/tabi/x/claims/types";

// Query creates service with guardian as rpc
service Query {
  // Params queries the mint parameters
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/x/claims/v1/params";
  }

  // NodeTotalRewards queries the total rewards accrued by a delegation.
  rpc NodeTotalRewards(QueryNodeTotalRewardsRequest) returns (QueryNodeTotalRewardsResponse) {
    option (google.api.http).get = "/x/claims/v1/nodes/{node_id}/total_rewards";
  }

  // HolderUnclaimedRewards queries the total rewards accrued by a delegation.
  rpc HolderUnclaimedRewards(QueryHolderUnclaimedRewardsRequest) returns (QueryHolderUnclaimedRewardsResponse) {
    option (google.api.http).get = "/x/claims/v1/holders/{user_id}/unclaimed_rewards";
  }

  // HolderTotalRewards queries the total rewards accrued by a delegation.
  rpc HolderTotalRewards(QueryHolderTotalRewardsRequest) returns (QueryHolderTotalRewardsResponse) {
    option (google.api.http).get = "/x/claims/v1/holders/{user_id}/total_rewards";
  }
}

// QueryParamsRequest is request type for the Query/Parameters RPC method
message QueryParamsRequest {
}

// QueryParamsResponse is response type for the Query/Parameters RPC method
message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];

  cosmos.base.query.v1beta1.PageResponse res = 2;
}

// QueryNodeTotalRewardsRequest is request type for the Query/NodeTotalRewards RPC method
message QueryNodeTotalRewardsRequest {
  string node_id = 1;
}

// QueryNodeTotalRewardsResponse is response type for the Query/NodeTotalRewards RPC method
message QueryNodeTotalRewardsResponse {
  cosmos.base.v1beta1.Coin total_rewards = 1;
}

// QueryHolderUnclaimedRewardsRequest is request type for the Query/HolderUnclaimedRewards RPC method
message QueryHolderUnclaimedRewardsRequest {
  string user_id = 1;
}

// QueryHolderUnclaimedRewardsResponse is response type for the Query/HolderUnclaimedRewards RPC method
message QueryHolderUnclaimedRewardsResponse {
  cosmos.base.v1beta1.Coin unclaimed_rewards = 1;
}

// QueryHolderTotalRewardsRequest is request type for the Query/HolderTotalRewards RPC method
message QueryHolderTotalRewardsRequest {
  string user_id = 1;
}

// QueryHolderTotalRewardsResponse is response type for the Query/HolderTotalRewards RPC method
message QueryHolderTotalRewardsResponse {
  cosmos.base.v1beta1.Coin total_rewards = 1;
}

